tests/specs/declare_namespace_ignore.txt
# mod.ts
/** Namespace JSdoc */
declare namespace RootNs {
    const a: "a";

    /** Nested namespace JSDoc
     * @ignore
     */
    namespace NestedNs {
      enum Foo {
        a = 1,
        b = 2,
        c = 3,
      }
    }
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:11
  | 
3 |     const a: "a";
  |           ^

# output.txt
Defined in file:///mod.ts:2:1

namespace RootNs
  Namespace JSdoc

  const a: "a"


# output.json
[
  {
    "name": "RootNs",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 2,
      "col": 0,
      "byteIndex": 23
    },
    "declarationKind": "declare",
    "jsDoc": {
      "doc": "Namespace JSdoc"
    },
    "kind": "namespace",
    "namespaceDef": {
      "elements": [
        {
          "name": "a",
          "isDefault": false,
          "location": {
            "filename": "file:///mod.ts",
            "line": 3,
            "col": 10,
            "byteIndex": 60
          },
          "declarationKind": "export",
          "kind": "variable",
          "variableDef": {
            "tsType": {
              "repr": "a",
              "kind": "literal",
              "literal": {
                "kind": "string",
                "string": "a"
              }
            },
            "kind": "const"
          }
        }
      ]
    }
  }
]
